# DinoPokerTech

./: .gitignore  README.md
.github/workflows/: cmake.yml
cpp/: CMakeLists.txt  CMakePresets.json  native.natvis
cpp/PokerTech/: ComboUtilities.cpp  ComboUtilities.h  EnabledRange.cpp  EnabledRange.h  FixedArray.h  HandRange.cpp  HandRange.h  HandRanking.cpp  HandRanking.h  PokerTech.cpp  PokerTech.h  PokerTypes.h  PokerUtilities.cpp  PokerUtilities.h  StringUtility.cpp  StringUtility.h  Utilities.cpp  Utilities.h  pch.h
cpp/PokerTech/EquityCalculator/: EquityCalculator.cpp  EquityCalculator.h  EquityCalculatorTypes.h
cpp/PokerTech/Precompute/: PreflopPrecomputeTable.cpp  PreflopPrecomputeTable.h  PreflopPrecomputeTableAPI.h  PreflopPrecomputeTableBuilder.cpp  PreflopPrecomputeTableBuilder.h
cpp/PokerTech/RangeConverters/: EnabledRangeToSyntax.cpp  EnabledRangeToSyntax.h  IRangeBuilder.h  RangeBuilderPercentage.cpp  RangeBuilderPercentage.h  RangeBuilderSyntaxString.cpp  RangeBuilderSyntaxString.h
cpp/PokerTechWasm/: TypesToJson.cpp  TypesToJson.h  WasmInterface.cpp
cpp/Precompute/: PokerPrecompute.cpp
cpp/Tests/: ComboUtilitiesTests.cpp  Deck.cpp  Deck.h  EquityCalculatorTests.cpp  HandRangeTests.cpp  HandRankingTests.cpp  HandRankingTests.h  HandSyntaxTests.cpp  PokerUtilitiesTests.cpp  PreflopPrecomputeTests.cpp  TestEnvironment.cpp  pch.h
js/: .gitignore  package-lock.json  package.dist.json  package.json  tsconfig.json
js/__tests__/: PokerAPI.test.ts
js/scripts/: package.js
js/src/: PokerAPI.ts  RangeUtility.ts  index.ts
